Added Carousel and SignPost classes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>Location Vélo - Avignon</title>
-	
+
 	<link rel="manifest" href="manifest.webmanifest">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -25,6 +25,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="ajax.js"></script>
 	<script src="underscore.js"></script>
+
+	<script src="Carousel.js"></script>
+	<script src="SignCanvas.js"></script>
 
 </head>
 
