Objectify main script

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 
 	<script src="Carousel.js"></script>
 	<script src="SignCanvas.js"></script>
+	<script src="script.js"></script>
 
 </head>
 
 <body>
-	<script src="script.js"></script>
+	<script>
+		var main = new Main()
+	</script>
 </body>
 
 </html>
