Moving script to Main

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<script src="Carousel.js"></script>
 	<script src="SignCanvas.js"></script>
-	<script src="script.js"></script>
+	<script src="Main.js"></script>
 
 </head>
 
